# mlx

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  buildimage  docker-compose.yml  inventory.ini  playbook.yml  pyproject.toml  run_playbook  ssh
data/cache/: versions.json  words.csv
hackernews/: datasets.py  eda.ipynb  embeddings.py  evaluate.ipynb  evaluate_embeddings.ipynb  evaluate_predictor.ipynb  hacker_news_items.csv  prediction.py  sample.py  secretserver.py  server.py  tokenization.py  train_embeddings.py  train_score_predictor.py
hackernews/data/: .gitignore
hackernews/models/: skipgram.py  upvote_predictor.py
hackernews/server/: main.py
hackernews/server/templates/: index.j2
hackernews/util/: artifacts.py  cache.py  constants.py  predictor-weights.generated.pt  weights.generated.pt
hackernews/web/templates/: index.j2  secretindex.j2
search/: .dockerignore  Dockerfile  buildimage  cache_docs.py  dataset.py  docker-compose.yml  inference.py  load_dataset.py  main.py  playbook.yml  run_playbook  search.py  server.py  train.py
search/data/: .gitignore
search/models/: doc_embedder.py  doc_projector.py  query_embedder.py  query_projector.py  two_towers.py  vectors.py
search/util/: artifacts.py  cache.py  chroma.py  constants.py  devices.py  mini.py
search/web/static/: styles.css
search/web/templates/: index.j2
