[project]
name = "mlx"
version = "0.1.0"
description = ""
authors = [
    {name = "cnimmo16"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "wandb (>=0.19.5,<0.20.0)",
    "swifter (>=1.4.0,<2.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
